--- a/index.html
+++ b/index.html
@@ -1,34 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- favicon -->
+  <!-- favicon -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-<!-- css -->
+  <!-- css -->
   <link rel="stylesheet" type="text/css" href="styles.css">
-<!-- google fonts  -->
+  <!-- google fonts  -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-<!-- fontawesome -->
+  <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/78f70abab5.js" crossorigin="anonymous"></script>
-<!-- title -->
+  <!-- title -->
   <title>Frontend Mentor | Huddle landing page with single introductory section</title>
 </head>
+
 <body>
+  <main class="container">
+    <section class="image-section">
+      <img src="images/logo.svg" class="logo" alt="">
+      <img src="images/illustration-mockups.svg" class="mockups" alt="">
+    </section>
 
-  <img src="images/illustration-mockups.svg">
+    <section class="info-section">
 
-  Build The Community Your Fans Will Love
+      <h1 class="hero-text">Build The Community Your Fans Will Love</h1>
 
-  Huddle re-imagines the way we build communities. You have a voice, but so does your audience. 
-  Create connections with your users as you engage in genuine discussion. 
+      <p class="copy-text">Huddle re-imagines the way we build communities. You have a voice, but so does your audience.
+        Create connections with your users as you engage in genuine discussion. </p>
 
-  Register
+      <button class="btn">Register</button>
+
+      <div class="link-icons">
+        <a href="#"> <i class="fa-brands fa-facebook-square"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter-square"></i></a>
+        <a href="#"><i class="fa-brands fa-instagram-square"></i></a>
+      </div>
+    </section>
+  </main>
 
 
 
 </body>
+
 </html>
